# Moozik

./: .buildconfig  .gitignore  README.md  gmusicapi.py  meson.build  moosic.py.in  moozik.py.in  org.gnome.Moosic.json  org.gnome.Moosic.json~  org.gnome.Moozik.json  playlist_listbox_row.py
Moosic/: __init__.py  gmusicapi.py  main.py  player.py  settings.py  tags.GMddmu  tags.UlwEeu  utils.py  window.py
Moosic/widgets/: __init__.py  albumWidget.py  album_playlist_page.py  listbox_row.py  login_dialog.py  now_playing_page.py  play_bar_widget.py  playlist_listbox_row.py  queue_listbox_row.py  search_page.py  tags.CeFnTm  test.py  track_list_page.py  utils.py
Moozik/: __init__.py  gmusicapi.py  main.py  player.py  settings.py  utils.py  window.py
Moozik/widgets/: __init__.py  albumWidget.py  album_playlist_page.py  cast_dialog.py  listbox_row.py  login_dialog.py  login_page.py  now_playing_page.py  play_bar_widget.py  search_page.py  track_list_page.py
data/: meson.build  org.gnome.Moosic.appdata.xml.in  org.gnome.Moosic.desktop.gresource.xml  org.gnome.Moosic.desktop.in  org.gnome.Moosic.gresource.xml  org.gnome.Moosic.gschema.xml  org.gnome.Moozik.appdata.xml.in  org.gnome.Moozik.desktop.in  org.gnome.Moozik.desktop.in.in  org.gnome.Moozik.gresource.xml  org.gnome.Moozik.gschema.xml
data/ui/: albumWidget.ui  album_playlist_page.ui  cast_dialog.ui  control_bar_widget.ui  listbox_row.ui  login_dialog.ui  login_page.ui  now_playing_page.ui  play_bar_widget.ui  play_bar_widget.ui~  playlist_listbox_row.ui  queue_listbox_row.ui  search_page.ui  track_list_page.ui  track_list_page.ui~  window.ui  window.ui~
moosic/: albumWidget.py  main.py  meson.build  moosic.in  tags.cjsORs  window.py
moosic/ui/: playlist_listbox_row.ui~  window.ui
moosic/widgets/: __init__.py
po/: POTFILES  meson.build
src/: albumWidget.py  albumWidget.ui  gmusicapi.py  meson.build  moosic.gresource.xml  moosic.in  player.py  playlist_listbox_row.py  settings.py  window.py  window.ui  window.ui~
src/ui/: albumWidget.ui  playlist_listbox_row.ui  window.ui
